contact page overflow fix

--- a/src/components/Projects/styles.module.css
+++ b/src/components/Projects/styles.module.css
@@ -100,6 +100,7 @@
     gap: 20px;
 
     white-space: nowrap;
+    overflow: hidden;
 }
 
 .slider {
